# Fat-MPI-ring

./: .gitignore  CMakeLists.txt  PutGet_plot.sh  README.md  SendRecv_Waitall_plot_3D.sh  SendRecv_plot.sh  composition.F90  constants.F90  fatring.F90  memory.F90  mpisetup.F90  primes.F90  ring.F90
